--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
                 <li><a href="2048.html">2048</a></li>
                 <li><a href="snake.html">Snake</a></li>
                 <li><a href="tictactoe.html">Tic Tac Toe</a></li>
+                <li><a href="sudoku.html">Sudoku Solver</a></li>
             </ul>
         </nav>
 
