--- a/index.html
+++ b/index.html
@@ -22,5 +22,9 @@
 
         <div style="height: 200vh;"></div>
 
+        <script>
+            console.log("Thanks Kush!")
+        </script>
+
     </body>
 </html>
